--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.0.0",
+    "next": "^13.0.0",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
