--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
   "dependencies": {
     "next": "^13.0.0",
     "react": "18.2.0",
-    "react-burger-menu": "^3.0.8",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0",
-    "react-router-dom": "^6.4.3"
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
